--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: george.marrows@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Various bits of piffle from Nairobi
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://georgemarrows.github.io" # the base hostname & protocol for your site
 twitter_username: georgemarrows
 github_username:  george.marrows
 
